#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
authors = [
  "Darius Maitia <darius@zettascale.tech>",
  "Julien Enoch <julien@enoch.fr>",
  "Luca Cominardi <luca.cominardi@zettascale.tech>",
  "Olivier Hécart <olivier.hecart@zettascale.tech>",
  "kydos <angelo@icorsaro.net>",
]
categories = ["database", "network-programming"]
description = "Backend for Zenoh using AWS S3 API"
edition = "2021"
homepage = "http://zenoh.io"
license = "EPL-2.0 OR Apache-2.0"
name = "zenoh-backend-s3"
repository = "https://github.com/eclipse-zenoh/zenoh-backend-s3"
version = "1.7.2"

[lib]
crate-type = ["cdylib", "rlib"]
name = "zenoh_backend_s3"

[features]
default = ["dynamic_plugin"]
dynamic_plugin = []
stats = ["zenoh/stats"]

[dependencies]
async-rustls = "0.4.0"
async-trait = "0.1.66"
aws-config = "1.0.0"
aws-sdk-s3 = { version = "1.29.0", features = [
  "behavior-version-latest",
] }
aws-sigv4 = { version = "1.2.9" }
aws-smithy-runtime-api = { version = "1.7.3" }
aws-smithy-client = "0.60.3"
aws-smithy-eventstream = "0.60.13"
aws-smithy-types = "1.3.4"
aws-smithy-async = "1.2.6"
aws-smithy-xml = "0.60.12"
aws-smithy-runtime = "1.4.0"
base64 = "0.21.0"
futures = "0.3.26"
git-version = "0.3.5"
http = "0.2.9"
hyper = "0.14.24"
hyper-rustls = "0.24.0"
lazy_static = "1.4.0"
rustls-pemfile = "2.0.0"
rustls-pki-types = "1.1.0"
serde = "1.0.154"
serde_json = "1.0.117"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1"
uhlc = "0.5.2"
webpki = "0.22.0"
webpki-roots = "0.25"
zenoh = { version = "1.7.2", features = [
  "unstable",
  "internal",
], git = "https://github.com/eclipse-zenoh/zenoh.git" , branch = "main" }
zenoh-plugin-trait = { version = "1.7.2", git = "https://github.com/eclipse-zenoh/zenoh.git" , branch = "main" }
zenoh_backend_traits = { version = "1.7.2", git = "https://github.com/eclipse-zenoh/zenoh.git" , branch = "main" }
zenoh-util = { version = "1.7.2", git = "https://github.com/eclipse-zenoh/zenoh.git" , branch = "main" }

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.deb]
copyright = "2022 ZettaScale Technology"
depends = "zenoh-plugin-storage-manager (=1.7.2)"
license-file = ["LICENSE", "0"]
maintainer = "zenoh-dev@eclipse.org"
name = "zenoh-backend-s3"
section = "net"
