#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
authors = [
  "Darius Maitia <darius@zettascale.tech>",
  "Julien Enoch <julien@enoch.fr>",
  "Luca Cominardi <luca.cominardi@zettascale.tech>",
  "Olivier Hécart <olivier.hecart@zettascale.tech>",
  "kydos <angelo@icorsaro.net>",
]
categories = ["database", "network-programming"]
description = "Backend for Zenoh using AWS S3 API"
edition = "2021"
homepage = "http://zenoh.io"
license = "EPL-2.0 OR Apache-2.0"
name = "zenoh-backend-s3"
repository = "https://github.com/eclipse-zenoh/zenoh-backend-s3"
version = "1.9.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "zenoh_backend_s3"

[features]
default = ["dynamic_plugin"]
dynamic_plugin = []
stats = ["zenoh/stats"]

[dependencies]
async-rustls = "0.4.0"
async-trait = "0.1.66"
# aws crates are pinned to latest versions supporting MSRV 1.93.0
aws-config = "=1.8.18"
aws-sdk-s3 = { version = "=1.137.0", features = ["behavior-version-latest"] }
aws-sigv4 = { version = "=1.4.5" }
aws-smithy-runtime-api = { version = "=1.12.3" }
# aws-smithy-runtime-api-macros is not a direct dependency of zenoh-backend-s3 but the pin is required to be able to build with zenoh's lockfile
aws-smithy-runtime-api-macros = "=1.0.0"
aws-smithy-client = "0.60.3"
aws-smithy-eventstream = "=0.60.21"
aws-smithy-types = "=1.5.0"
aws-smithy-async = "=1.2.14"
aws-smithy-xml = "=0.60.15"
aws-smithy-runtime = "=1.11.3"
base64 = "0.22.1"
futures = "0.3.26"
git-version = "0.3.5"
hyper = "0.14.24"
hyper-rustls = "0.24.0"
lazy_static = "1.4.0"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.1.0"
serde = "1.0.154"
serde_json = "1.0.117"
time = "0.3.53"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1"
uhlc = "0.8.0"
webpki = "0.22.0"
webpki-roots = "0.25"
zenoh = { version = "1.9.0", features = [
  "unstable",
  "internal",
], git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
zenoh-plugin-trait = { version = "1.9.0", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
zenoh_backend_traits = { version = "1.9.0", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
zenoh-util = { version = "1.9.0", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.deb]
copyright = "2022 ZettaScale Technology"
depends = "zenoh-plugin-storage-manager (=1.9.0)"
license-file = ["LICENSE", "0"]
maintainer = "zenoh-dev@eclipse.org"
name = "zenoh-backend-s3"
section = "net"
